# Awaitless

./: .editorconfig  .gitattributes  LICENSE  README.md  pyproject.toml
docs/: PRD.zh-CN.md
examples/: benchmark.py  config.toml
skills/awaitless/: SKILL.md
skills/awaitless/agents/: openai.yaml
src/awaitless/: __init__.py  cli.py  config.py  constants.py  db.py  runner.py  service.py  util.py
src/awaitless/backends/: __init__.py  local.py  ssh.py
tests/: test_cli.py  test_util.py
